--- a/3356-java-screenmatch-web-main/src/main/resources/application.properties
+++ b/3356-java-screenmatch-web-main/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost/series
 spring.datasource.username=postgres
-spring.datasource.password=postgre
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
-spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
